Fix path to artifact.

--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -27,4 +27,4 @@ jobs:
       uses: actions/upload-artifact@v1
       with:
         name: ADOSCloneAllRepos
-        path: bin\Release\netcoreapp3.1
+        path: ADOSCloneAllRepos\bin\Release\netcoreapp3.1
