--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -10,6 +10,7 @@ on:
 
 jobs:
   build:
+    name: Build and test
 
     runs-on: windows-latest
 
@@ -34,8 +35,21 @@ jobs:
       run: dotnet build --configuration Release --no-restore -p:Version=${{ steps.gitversion.outputs.semVer }}
     - name: Test
       run: dotnet test --no-restore --verbosity normal
-    - name: Upload math result for job 2
+    - name: Upload ADOSCloneAllRepos
       uses: actions/upload-artifact@v1
       with:
         name: ADOSCloneAllRepos
         path: ADOSCloneAllRepos\bin\Release\netcoreapp3.1
+
+  publish_package:
+    name: Publish to nuget.org
+    needs: build
+    if: github.ref == 'refs/heads/master'
+    steps:
+      - name: Deploy app
+        run: |
+          echo "Deploying"
+      - name: Download build artifact
+        uses: actions/download-artifact@v1
+        with:
+          name: ADOSCloneAllRepos
