--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -11,7 +11,6 @@ on:
 jobs:
   build:
     name: Build and test
-
     runs-on: windows-latest
 
     steps:
@@ -44,6 +43,8 @@ jobs:
   publish_package:
     name: Publish to nuget.org
     needs: build
+    runs-on: windows-latest
+
     if: github.ref == 'refs/heads/master'
     steps:
       - name: Deploy app
