--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -45,7 +45,7 @@ jobs:
     needs: build
     runs-on: windows-latest
 
-    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/publish-to-nuget-as-tool'
     steps:
       - name: Deploy app
         run: |
