--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -2,9 +2,7 @@ name: ADOSCloneAllRepos CI-CD
 
 on:
   push:
-    branches:
-      - master
-      - publish-to-nuget-as-tool
+    branches: [ '*' ]
   pull_request:
     branches: [ master ]
 
